refactor(java-sdk): replace SRI wsimport client with manual HTTP adapters