@@ -3,60 +3,58 @@
 
 package io.github.opensri.infrastructure.sri;
 
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 
 /**
- * Agrupa las ubicaciones oficiales de los WSDL del SRI para recepción y autorización.
+ * Centraliza los endpoints SOAP oficiales del SRI para recepción y autorización.
  *
- * <p>Estas constantes permiten construir proxies SOAP sin hardcodear URLs en distintos puntos del
- * código y distinguen explícitamente entre los ambientes de pruebas y producción.
+ * <p>Estas constantes permiten configurar clientes HTTP sin repetir direcciones del servicio en
+ * varios puntos del SDK y distinguen explícitamente entre los ambientes de pruebas y producción.
+ *
+ * <p>Aunque los nombres conservan la referencia histórica al WSDL, las URIs se usan como destinos
+ * directos de los envelopes SOAP enviados por {@code infrastructure.sri.client}.
  */
-public class WsdlLocations {
+public class SRIEndpoints {
 
   /**
    * URL <a
    * href="https://celcer.sri.gob.ec/comprobantes-electronicos-ws/RecepcionComprobantesOffline?wsdl">https://celcer.sri.gob.ec/comprobantes-electronicos-ws/RecepcionComprobantesOffline?wsdl</a>
    */
-  public static final URL SRI_PRUEBAS_RECEPCION_COMPROBANTES_WSDL =
-      createURL(
+  public static final URI SRI_PRUEBAS_RECEPCION_COMPROBANTES_WSDL =
+      createURI(
           "https://celcer.sri.gob.ec/comprobantes-electronicos-ws/RecepcionComprobantesOffline?wsdl");
 
   /**
    * URL <a
    * href="https://celcer.sri.gob.ec/comprobantes-electronicos-ws/AutorizacionComprobantesOffline?wsdl">https://celcer.sri.gob.ec/comprobantes-electronicos-ws/AutorizacionComprobantesOffline?wsdl</a>
    */
-  public static final URL SRI_PRUEBAS_AUTORIZACION_COMPROBANTES_WSDL =
-      createURL(
+  public static final URI SRI_PRUEBAS_AUTORIZACION_COMPROBANTES_WSDL =
+      createURI(
           "https://celcer.sri.gob.ec/comprobantes-electronicos-ws/AutorizacionComprobantesOffline?wsdl");
 
   /**
    * URL <a
    * href="https://cel.sri.gob.ec/comprobantes-electronicos-ws/RecepcionComprobantesOffline?wsdl">https://cel.sri.gob.ec/comprobantes-electronicos-ws/RecepcionComprobantesOffline?wsdl</a>
    */
-  public static final URL SRI_PRODUCCION_RECEPCION_COMPROBANTES_WSDL =
-      createURL(
+  public static final URI SRI_PRODUCCION_RECEPCION_COMPROBANTES_WSDL =
+      createURI(
           "https://cel.sri.gob.ec/comprobantes-electronicos-ws/RecepcionComprobantesOffline?wsdl");
 
   /**
    * URL <a
    * href="https://cel.sri.gob.ec/comprobantes-electronicos-ws/AutorizacionComprobantesOffline?wsdl">https://cel.sri.gob.ec/comprobantes-electronicos-ws/AutorizacionComprobantesOffline?wsdl</a>
    */
-  public static final URL SRI_PRODUCCION_AUTORIZACION_COMPROBANTES_WSDL =
-      createURL(
+  public static final URI SRI_PRODUCCION_AUTORIZACION_COMPROBANTES_WSDL =
+      createURI(
           "https://cel.sri.gob.ec/comprobantes-electronicos-ws/AutorizacionComprobantesOffline?wsdl");
 
   /**
-   * Convierte una cadena en {@link URL} y falla inmediatamente si la constante no es válida.
+   * Convierte una cadena en {@link URI} y falla inmediatamente si la constante no es válida.
    *
-   * @param urlString ubicación absoluta del WSDL
-   * @return instancia {@link URL} lista para usar en los proxies SOAP
+   * @param urlString ubicación absoluta del endpoint SOAP del SRI
+   * @return instancia {@link URI} lista para usar en los clientes HTTP del SDK
    */
-  private static URL createURL(String urlString) {
-    try {
-      return new URL(urlString);
-    } catch (MalformedURLException e) {
-      throw new IllegalArgumentException(e);
-    }
+  private static URI createURI(String urlString) {
+    return URI.create(urlString);
   }
 }
